--- a/css/responsive.css
+++ b/css/responsive.css
@@ -198,10 +198,10 @@
 		position: fixed;
 		top: 0;
 		z-index: 6666;
-		background-color: rgba(250,250,250,0.9);
+		background-color: rgba(0,116,185,0.9);
 	}
 	#navigation button i {
-		color: #1e1e1e;
+		color: white;
 	}
 	.welcome-box {
 		padding: 150px 0px;
@@ -266,7 +266,7 @@
 		right: -15px;
 		border: 0;
 		box-shadow: none;
-		background: #fff;
+		background-color: rgba(255,255,255,0.9);
 		text-align:left;
 		top: 100%;
 		display:none;
