Mail form functional

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -170,7 +170,6 @@ video {
   text-align:center;
   line-height:52px;
   padding:0 35px;
-  border-radius: 0px;
   text-transform:uppercase;
   font-weight:600;
   border:2px solid transparent;
@@ -879,7 +878,6 @@ textarea.form-control {
   transition: all 1s ease;
   filter: brightness(80%);
 }
-
 span.test-a {
   display: inline-block;
   position: relative;
@@ -891,7 +889,10 @@ span.test-a {
   background-color: rgba(40, 103, 178, 0.9);
   padding: 8px;
 }
-
 .client-row img:hover {
   opacity: 0.8;
+}
+#form-messages {
+  padding: 15px;
+  border-radius: 10px;
 }
