--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -905,3 +905,7 @@ a.bg-warn:focus, a.bg-success:hover, button.bg-success:focus, button.bg-success:
 .about-contentbox ul {
   padding-left: 20px;
 }
+.thumb-inner a {
+  padding-top: 50px;
+  color: black;
+}
